--- a/src/Savepoint/Savepoint.fsproj
+++ b/src/Savepoint/Savepoint.fsproj
@@ -12,6 +12,7 @@
     <Compile Include="Theme.fs" />
     <Compile Include="Domain.fs" />
     <Compile Include="Services\Config.fs" />
+    <Compile Include="Services\SshConnection.fs" />
     <Compile Include="Services\Staleness.fs" />
     <Compile Include="Views\Components\StatusIndicator.fs" />
     <Compile Include="Views\Components\ProgressBar.fs" />
@@ -28,7 +29,9 @@
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.2.3" />
     <PackageReference Include="Avalonia.FuncUI" Version="1.5.2" />
     <PackageReference Include="Avalonia.FuncUI.Elmish" Version="1.5.2" />
+    <PackageReference Include="Elmish" Version="4.3.0" />
     <PackageReference Include="FSharp.SystemTextJson" Version="1.3.13" />
+    <PackageReference Include="SSH.NET" Version="2024.2.0" />
   </ItemGroup>
 
 </Project>
